# SimpleBGC-ROS-Diver

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml
include/: platform_control.hpp  util.h
include/platform_driver/: util.h
launch/: platform_driver.launch
msg/: command.msg  platform_control.msg
src/: main.cpp  test.cpp
tool/: a.out  crc_check.cpp
